# Simple-Raytracer

./: CMakeLists.txt  README.md  floor.cpp  main.cpp  object.cpp  object.h  ray.cpp  rayscanner.cpp  sphere.cpp  sphere.h  vec3d.cpp  vec3d.h
include/: color.h  command_line_interface.h  floor.h  image.h  material.h  object.h  ray.h  rayscanner.h  scene.h  sphere.h  texture.h  vec3d.h
src/: color.cpp  command_line_interface.cpp  floor.cpp  image.cpp  main.cpp  object.cpp  ray.cpp  rayscanner.cpp  scene.cpp  sphere.cpp  texture.cpp  vec3d.cpp
